<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    style="@style/Dialog.AppTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp">

    <include
        android:id="@+id/title_container"
        layout="@layout/layout_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/subtle_age_reminder"
        android:textAppearance="@style/TextAppearance.FluentUI.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_container" />

    <!-- todo use list input cells from fluent ui once released -->
    <EditText
        android:id="@+id/year"
        style="@style/Dialog.AppTheme.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_reminder_year"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtle" />

    <EditText
        android:id="@+id/month"
        style="@style/Dialog.AppTheme.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_reminder_month"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/year"
        app:layout_constraintEnd_toStartOf="@+id/day"
        app:layout_constraintStart_toEndOf="@+id/year" />

    <EditText
        android:id="@+id/day"
        style="@style/Dialog.AppTheme.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/hint_reminder_day"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/month" />

    <ViewStub
        android:id="@+id/more_options_view_stub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout="@layout/viewstub_reminder_precision"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <Button
        android:id="@+id/show_more"
        style="@style/Widget.FluentUI.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_reminder_precious_button"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

</androidx.constraintlayout.widget.ConstraintLayout>