<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/Dialog.AppTheme"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/dialog_padding_bottom">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.FluentUI.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/cities" />

    <ImageButton
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ms_ripple_transparent_background"
        android:contentDescription="@string/description_done"
        android:tint="?attr/fluentuiCompoundButtonTintCheckedColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ms_ic_checkmark_24_filled" />

    <TextView
        android:id="@+id/tv_error_message"
        style="@style/TextAppearance.Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@tools:sample/lorem" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:longClickable="true"
        style="@style/AppTheme.EditText"
        android:singleLine="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        android:nextFocusDown="@id/date_of_birth"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_message" />

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/set_birthday_hint"
        android:imeOptions="actionGo"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppTheme.EditText"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/iv_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/description_pick_date"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@+id/date_of_birth"
        app:layout_constraintTop_toTopOf="@+id/date_of_birth"
        app:srcCompat="@drawable/ic_fluent_calendar_24_regular" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/description_choose_avatar"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
        tools:src="@drawable/img_add_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>